@@ -1,6 +1,7 @@
 Revision history for Perl extension Sys::Info::Driver::Linux.
 
 {{$NEXT}}
+     - Fix for "Can't open /etc/ARRAY(0xdeadbeef): No such file or directory at ..."
 
 0.7905 2018-12-31 BURAK
 
